// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MenuProvider + useCombinedMenu > should open the combined menu and close it when an item is clicked 1`] = `
<body
  style="padding-right: 1024px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  >
    <div>
      <button
        data-testid="open-menu-button"
      />
    </div>
  </div>
  <div
    class="MuiPopover-root MuiMenu-root MuiModal-root css-10nakn3-MuiModal-root-MuiPopover-root-MuiMenu-root"
    role="presentation"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root MuiBackdrop-invisible MuiModal-backdrop css-g3hgs1-MuiBackdrop-root-MuiModal-backdrop"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-testid="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiPopover-paper MuiMenu-paper MuiMenu-paper css-2ie444-MuiPaper-root-MuiPopover-paper-MuiMenu-paper"
      style="opacity: 1; transform: none; transition: opacity 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; top: 69px; left: 42px; transform-origin: 0px 0px;"
      tabindex="-1"
    >
      <ul
        class="MuiList-root MuiList-padding MuiList-dense MuiMenu-list css-1sf1hir-MuiList-root-MuiMenu-list"
        role="menu"
        tabindex="-1"
      >
        <div
          class="csdk-menu-section"
          tabindex="0"
        >
          <li
            class="MuiListSubheader-root MuiListSubheader-gutters MuiListSubheader-sticky css-h2pzkj-MuiListSubheader-root"
          >
            Some Section
          </li>
          <div
            class="csdk-menu-item "
          >
            <li
              class="MuiButtonBase-root MuiMenuItem-root MuiMenuItem-gutters MuiMenuItem-root MuiMenuItem-gutters css-11utrpy-MuiButtonBase-root-MuiMenuItem-root"
              role="menuitem"
              tabindex="-1"
            >
              <div
                class="csdk-menu-item-content"
              >
                Menu item 1
              </div>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </li>
          </div>
        </div>
      </ul>
    </div>
    <div
      data-testid="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`MenuProvider + useCombinedMenu > should open the combined menu with the nested menu items, and close it when an item is clicked 1`] = `
<body
  style="padding-right: 1024px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  >
    <div>
      <button
        data-testid="open-menu-button"
      />
    </div>
  </div>
  <div
    class="MuiPopover-root MuiMenu-root MuiModal-root css-10nakn3-MuiModal-root-MuiPopover-root-MuiMenu-root"
    role="presentation"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root MuiBackdrop-invisible MuiModal-backdrop css-g3hgs1-MuiBackdrop-root-MuiModal-backdrop"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-testid="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiPopover-paper MuiMenu-paper MuiMenu-paper css-2ie444-MuiPaper-root-MuiPopover-paper-MuiMenu-paper"
      style="opacity: 1; transform: none; transition: opacity 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; top: 69px; left: 42px; transform-origin: 0px 0px;"
      tabindex="-1"
    >
      <ul
        class="MuiList-root MuiList-padding MuiList-dense MuiMenu-list css-1sf1hir-MuiList-root-MuiMenu-list"
        role="menu"
        tabindex="-1"
      >
        <div
          class="csdk-menu-section"
          tabindex="0"
        >
          <li
            class="MuiListSubheader-root MuiListSubheader-gutters MuiListSubheader-sticky css-h2pzkj-MuiListSubheader-root"
          >
            Some Section
          </li>
          <div
            class="csdk-menu-item "
          >
            <li
              class="MuiButtonBase-root MuiMenuItem-root MuiMenuItem-gutters MuiMenuItem-root MuiMenuItem-gutters css-upema-MuiButtonBase-root-MuiMenuItem-root"
              role="menuitem"
              tabindex="-1"
            >
              <div
                class="csdk-menu-item-content"
                style="width: 100%; display: flex; align-items: center; justify-content: space-between;"
              >
                Menu item 1
                <svg
                  height="24px"
                  viewBox="0 0 24 24"
                  width="24px"
                >
                  <path
                    d="M13.34 12.5l-2.72-3.175a.5.5 0 1 1 .76-.65l2.998 3.5a.5.5 0 0 1 0 .65l-2.998 3.5a.5.5 0 1 1-.76-.65l2.72-3.175z"
                    fill="#5B6372"
                  />
                </svg>
              </div>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </li>
          </div>
        </div>
      </ul>
    </div>
    <div
      data-testid="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`MenuProvider + useCombinedMenu > should open the combined menu with the nested menu items, and close it when an item is clicked 2`] = `
<body
  style="padding-right: 1024px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  >
    <div>
      <button
        data-testid="open-menu-button"
      />
    </div>
  </div>
  <div
    aria-hidden="true"
    class="MuiPopover-root MuiMenu-root MuiModal-root css-10nakn3-MuiModal-root-MuiPopover-root-MuiMenu-root"
    role="presentation"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root MuiBackdrop-invisible MuiModal-backdrop css-g3hgs1-MuiBackdrop-root-MuiModal-backdrop"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-testid="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiPopover-paper MuiMenu-paper MuiMenu-paper css-2ie444-MuiPaper-root-MuiPopover-paper-MuiMenu-paper"
      style="opacity: 1; transform: none; transition: opacity 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; top: 69px; left: 42px; transform-origin: 0px 0px;"
      tabindex="-1"
    >
      <ul
        class="MuiList-root MuiList-padding MuiList-dense MuiMenu-list css-1sf1hir-MuiList-root-MuiMenu-list"
        role="menu"
        tabindex="-1"
      >
        <div
          class="csdk-menu-section"
          tabindex="0"
        >
          <li
            class="MuiListSubheader-root MuiListSubheader-gutters MuiListSubheader-sticky css-h2pzkj-MuiListSubheader-root"
          >
            Some Section
          </li>
          <div
            class="csdk-menu-item "
          >
            <li
              class="MuiButtonBase-root MuiMenuItem-root MuiMenuItem-gutters MuiMenuItem-root MuiMenuItem-gutters css-upema-MuiButtonBase-root-MuiMenuItem-root"
              role="menuitem"
              tabindex="-1"
            >
              <div
                class="csdk-menu-item-content"
                style="width: 100%; display: flex; align-items: center; justify-content: space-between;"
              >
                Menu item 1
                <svg
                  height="24px"
                  viewBox="0 0 24 24"
                  width="24px"
                >
                  <path
                    d="M13.34 12.5l-2.72-3.175a.5.5 0 1 1 .76-.65l2.998 3.5a.5.5 0 0 1 0 .65l-2.998 3.5a.5.5 0 1 1-.76-.65l2.72-3.175z"
                    fill="#5B6372"
                  />
                </svg>
              </div>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </li>
          </div>
        </div>
      </ul>
    </div>
    <div
      data-testid="sentinelEnd"
      tabindex="0"
    />
  </div>
  <div
    class="MuiPopover-root MuiMenu-root MuiModal-root css-10nakn3-MuiModal-root-MuiPopover-root-MuiMenu-root"
    role="presentation"
    style="pointer-events: none;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root MuiBackdrop-invisible MuiModal-backdrop css-g3hgs1-MuiBackdrop-root-MuiModal-backdrop"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-testid="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiPopover-paper MuiMenu-paper MuiMenu-paper css-2ie444-MuiPaper-root-MuiPopover-paper-MuiMenu-paper"
      style="opacity: 1; transform: none; transition: opacity 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; top: 16px; left: 16px; transform-origin: -16px -16px;"
      tabindex="-1"
    >
      <ul
        class="MuiList-root MuiList-padding MuiMenu-list css-1exmg4n-MuiList-root-MuiMenu-list"
        role="menu"
        tabindex="-1"
      >
        <div
          style="pointer-events: auto;"
          tabindex="0"
        >
          <div
            class="csdk-menu-section"
          >
            <li
              class="MuiListSubheader-root MuiListSubheader-gutters MuiListSubheader-sticky css-h2pzkj-MuiListSubheader-root"
            >
              Nested Section
            </li>
            <div
              class="csdk-menu-item "
            >
              <li
                class="MuiButtonBase-root MuiMenuItem-root MuiMenuItem-gutters MuiMenuItem-root MuiMenuItem-gutters css-vj38tt-MuiButtonBase-root-MuiMenuItem-root"
                role="menuitem"
                tabindex="-1"
              >
                <div
                  class="csdk-menu-item-content"
                >
                  Nested Menu item 1
                </div>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </li>
            </div>
          </div>
        </div>
      </ul>
    </div>
    <div
      data-testid="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;
